# github_scan

./: pyproject.toml
src/github_scan/: __main__.py  cli.py
